--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
+// 20230314044639
+// https://raw.githubusercontent.com/microverseinc/linters-config/master/html-css-js/.eslintrc.json
+
 {
   "env": {
     "browser": true,
@@ -9,14 +12,20 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "extends": ["airbnb-base"],
+  "extends": [
+    "airbnb-base"
+  ],
   "rules": {
     "no-shadow": "off",
     "no-param-reassign": "off",
     "eol-last": "off",
-    "import/extensions": [ 1, {
-      "js": "always", "json": "always"
-    }]
+    "import/extensions": [
+      1,
+      {
+        "js": "always",
+        "json": "always"
+      }
+    ]
   },
   "ignorePatterns": [
     "dist/",
