--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.27.5",
+    "esquery": "1.4.0",
     "hint": "^7.1.3",
     "jest": "^29.5.0",
     "style-loader": "^3.3.1",
